# CNC_Surface

./: .gitignore  GCodeStudio.spec  LICENSE  MANIFEST.in  README.md  build.bat  build.ps1  build.rar  build_gcode_studio.bat  gcode_studio.py  main.py  pyproject.toml  requirements.txt  setup.py
gcode_studio/: MIT License  README.md  __init__.py  config.py  controller.py  gcode_highlighter.py  generator.py  main.py  models.py  parser.py  requirements.txt  viewer_window.py
