[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode-studio"
version = "1.0.0"
description = "Генератор и визуализатор G-кода для фрезерных станков с ЧПУ"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "G-Code Studio Team", email = "gcode.studio@example.com"},
]
keywords = ["gcode", "cnc", "milling", "g-code", "generator", "visualizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: Russian",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/Spruts80/CNC_Surface"
"Bug Tracker" = "https://github.com/Spruts80/CNC_Surface/issues"
Documentation = "https://github.com/Spruts80/CNC_Surface/wiki"
Repository = "https://github.com/Spruts80/CNC_Surface"

[project.scripts]
gcode-studio = "main:main"

[project.gui-scripts]
gcode-studio-gui = "main:main"

[tool.setuptools]
packages = ["gcode_studio"]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.ico", "*.png", "*.jpg"]
